# super-duper-goggles

larvalabeler/: README.md  main.py  pyproject.toml
larvalabeler/larvalabeler/: annotation.py  combine.py  extract.py  review.py  utils.py
socialiZe/: Progress.md  README.md  environment.yml
socialiZe/backend/: delay.py  main.py
socialiZe/backend/FrameLogger/: FrameLogger.py  __init__.py
socialiZe/backend/PySpinManager/: PySpinCam.py  PySpinManager.py  __init__.py
socialiZe/backend/functions/: generate_dot_video.py
socialiZe/backend/routers/: api.py  ws.py
socialiZe/documentation/: Installation.md  Notes.md  Roadmap.md
socialiZe/frontend/: package-lock.json  package.json  svelte.config.js
socialiZe/frontend/src/: app.html  app.postcss
socialiZe/frontend/src/lib/helpers/: animationHelper.ts  configureSvg.ts  random.ts  sharedWorker.ts  speedHelper.ts  tsconfig.json  workerParsers.ts
socialiZe/frontend/src/lib/stores/: arenaStore.ts  circularPathStore.ts  dotState.ts  dotStore.ts  dotTestStore.ts  loggingStore.ts  popoutStore.ts  statusStore.ts  stimulus.ts
socialiZe/frontend/src/lib/types/: parameters.ts
socialiZe/frontend/src/lib/utils/: handleInputUpload.ts  loadCSV.ts
socialiZe/frontend/src/routes/(app)/: +layout.svelte  +page.svelte
socialiZe/frontend/src/routes/(popouts)/: +layout.svelte
socialiZe/frontend/static/: tsconfig.json
socialiZe/frontend/static/ts/helpers/: predefinedPaths.ts
socialiZe/frontend/static/ts/workers/: stimulus.worker.ts
website/: bun.lockb
website/docs/getting-started/: index.md
(+23 files in other folders)
